do not disable "ext.dirs" location, because IBM jdk stores some of its essential jars there